[gd_scene load_steps=3 format=3 uid="uid://donxugfiueh24"]

[ext_resource type="FontFile" uid="uid://bnos414srl8hd" path="res://fonts/Xolonium-Regular.ttf" id="1_e5qrc"]
[ext_resource type="Script" path="res://options.gd" id="1_noo2b"]

[node name="Options" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_noo2b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -71.0
offset_right = 160.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullscreenToggleButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BackButton")
theme_override_fonts/font = ExtResource("1_e5qrc")
theme_override_font_sizes/font_size = 75
text = "Fullscreen"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../FullscreenToggleButton")
theme_override_fonts/font = ExtResource("1_e5qrc")
theme_override_font_sizes/font_size = 75
text = "Back"

[connection signal="pressed" from="VBoxContainer/FullscreenToggleButton" to="." method="_on_fullscreen_toggle_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_button_pressed"]
